# kodit

./: CLAUDE.md  DEPLOYMENT_README.md  Dockerfile  LITELLM_MIGRATION_PLAN.md  pyproject.toml
.github/workflows/: docker.yaml  test.yaml
benchmarks/aider/: results.yaml  run.sh
benchmarks/evalplus/: Dockerfile  README.md  main.py  pyproject.toml
benchmarks/swe-bench/: .gitignore  README.md  gpt-4.1-2025-04-14.gpt_4_1_kodit_bm25.json  gpt-4.1-2025-04-14.gpt_4_1_oracle.json  gpt-4.1-nano-2025-04-14.gpt_4_1_nano_oracle.json  gpt-4.1-nano-2025-04-14.kodit_bm25.json  gpt-4.1-nano-2025-04-14.swe_bench_light.json  main.py  prediction.py  pyproject.toml  temp.json
docs/: _index.md
docs/demos/go-simple-microservice/: index.md
docs/developer/: index.md
docs/getting-started/integration/: index.md
docs/reference/api/: index.md  openapi.json
docs/reference/configuration/: index.md
docs/reference/mcp/: index.md
docs/requirements/: 2025-01-14-0931-rest-api-indexes-search.md
src/coda/: cli.py  logging.py
src/kodit/: app.py  cli.py  config.py  database.py  log.py  mcp.py
src/kodit/bm25/: keyword_search_factory.py  local_bm25.py
src/kodit/domain/: entities.py  protocols.py  repositories.py  value_objects.py
src/kodit/embedding/: vectorchord_vector_search_service.py
src/kodit/indexing/: fusion.py  indexing_repository.py  indexing_service.py  service.py
src/kodit/retreival/: service.py
src/kodit/search/: repository.py  (+3 more)
tests/: conftest.py  smoke.sh
tests/kodit/: app_test.py  cli_test.py  log_test.py  mcp_test.py
tests/performance/: similarity.py
(+74 files in other folders)
