[project]
name = "swe-bench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.6.0",
    "gitpython>=3.1.44",
    "openai>=1.78.0",
    "tdqm>=0.0.1",
    "torch>=2.2.0",
    "swebench[datasets]>=4.0.3",
]

[dependency-groups]
dev = [
    "ruff>=0.11.9",
]
